Update input dialog to coexpnetviz-python 5.0.0
Works up to submitting the input dialog (validation included). The rest
hasn't been updated yet and is completely broken as it still tries to
call the old web service.

- Support creating CoExpNetViz networks through Cytoscape CLI (thanks to
  using tunables).
- Remove support for input presets
- Remove support for using remote PLAZA gene families file as
  we will run coexpnetviz-python locally.
- Remove support for mutual information. It was added as an
  afterthought, but the algorithm expects a correlation statistic,
  which mutual information isn't, so the results using this method were
  incorrect.

Refactor:

- Remove JavaFX. Cytoscape uses Swing so we better stick to the same
  look and feel. We also get to use their Swing utils this way. The OSGi
  config is simpler with Swing. All (reasonable) Java implementations
  include Swing, but not sure whether e.g. openjdk includes JavaFX.
- Use a TaskFactory with tunables instead of creating our own dialog. We
  also get CLI support for free this way.
- Set menu properties on the TaskFactory instead of manually adding a
  CyAction to the menu.
- Remove Configuration and its jaxb dependency. It only stored the
  presets, which we've removed, and the last browsed path, but we let
  Cytoscape / the OS choose the initial path in file dialogs now.
- Remove utils which are no longer needed